[package]
name = "ssh-agent-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
atomic = "0.6.1"
auto-launch = "0.6.0"
base64 = "0.22.1"
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
image = "0.25.9"
sanitize-filename = "0.6.0"
sha2 = "0.10.9"
ssh2 = "0.9.5"
ssh2-config = "0.7.0"
tray-icon = "0.21.3"
winit = "0.30.12"
